# bakalari-ha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  bump-bakalari.toml  bump-ha.toml  bump-version.toml  hacs.json  pyproject.toml  ruff.toml
.devcontainer/: .devcontainer.json  Dockerfile  postCreate.sh
.github/: CODEOWNERS  issues-labeler.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  issue-labeler.yml  release-asset.yml  release-drafter-dev.yml  release-drafter-main.yml  release-drafter.yml  release.yml  sync-labels.yml  update-change log.yml  update-changelog.yml  validate.yml  verify_versions.yml
blueprints/automation/: bakalari_notify_new_marks.yaml
custom_components/bakalari/: __init__.py  api.py  calendar.py  children.py  config_flow.py  const.py  coordinator.py  coordinator_marks.py  coordinator_messages.py  coordinator_noticeboard.py  coordinator_timetable.py  entity.py  manifest.json  options_flow.py  sensor.py  sensor_helpers.py  sensor_marks.py  sensor_messages.py  sensor_noticeboard.py  sensor_timetable.py  services.yaml  strings.json  utils.py
custom_components/bakalari/translations/: cs.json
script/: pretty_basedpyright.py  validate_version.py
tests/: __init__.py  test_api_client.py  test_coordinator.py  test_sensor_helpers.py  test_sensor_setup.py  test_sensors_entities.py  test_smoke.py
www/bakalari-card/: bakalari-card.js
