[project]
name = "bakalari-ha"
version = "0.1.1"
description = "Home Assistant custom integration for Bakaláři API endpoints."
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.setuptools.packages.find]
include = [
  "custom_components.bakalari",
  "custom_components.bakalari.*",
]
exclude = [
  "script",
  "script.*",
  "tests",
  "tests.*",
]
[tool.ruff.lint.isort]
known-first-party = ["custom_components.bakalari"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
exclude = [".venv", "venv", "env", "tests"]
extraPaths = ["./custom_components"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedClass = true
reportOptionalMemberAccess = false
