[project]
name = "bakalari-ha"
version = "1.1.0"
description = "Home Assistant custom integration for Bakaláři API endpoints."
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.setuptools.packages.find]
include = [
  "custom_components.bakalari",
  "custom_components.bakalari.*",
]
exclude = [
  "script",
  "script.*",
  "tests",
  "tests.*",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.format]
docsstring-code-format = true
docsstring-code-inline-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.bakalari"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
exclude = [".venv", "venv", "env", "tests"]
extraPaths = ["./custom_components"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedClass = true
reportOptionalMemberAccess = false
